--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 #board {
-    width:100%;height:100%
+    width:100%;height:100vh
 }
 body {padding:0;margin:0}
 #board * {border: 1px solid}
+#board div * {width:33%;height:33vh}
