--- a/style.css
+++ b/style.css
@@ -2,5 +2,5 @@
     width:100%;height:100vh
 }
 body {padding:0;margin:0}
-#board * {border: 1px solid}
+#board * {border: 1px solid;margin:0;padding:0}
 #board div * {width:33%;height:33vh;display:inline-block}
