--- a/style.css
+++ b/style.css
@@ -3,5 +3,5 @@
 }
 body {padding:0;margin:0}
 #board div {white-space: nowrap}
-#board * {border: 1px solid;margin:0;padding:0}
-#board div * {width:33%;height:33vh;display:inline-block}
+#board * {margin:0;padding:0}
+#board div * {width:33%;height:33vh;display:inline-block;border: 1px solid}
