--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@
     width:100%;height:100vh
 }
 body {padding:0;margin:0}
-#board div {white-space: nowrap}
+#board > div {white-space: nowrap}
 #board * {margin:0;padding:0}
 #board div * {width:33%;height:33vh;display:inline-block;border: 1px solid}
