--- a/style.css
+++ b/style.css
@@ -5,3 +5,14 @@ body {padding:0;margin:0}
 #board > div {white-space: nowrap}
 #board * {margin:0;padding:0}
 #board div * {width:33%;height:33vh;display:inline-block;border: 1px solid}
+#orangeBox {
+    background: #f90;
+    color: #fff;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+}
