--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 #board {
-    width:100%;height:100vh
+    margin: auto;
+    min-width: 300px;
+    width: 60%;
 }
 body {padding:0;margin:0}
 #board td {border: 1px solid}
