--- a/style.css
+++ b/style.css
@@ -1,10 +1,5 @@
 #board {
-    margin: auto;
-    min-width: 300px;
-    width: 60%;
+    width: 100%;
+    height: 100vh;
 }
 body {padding:0;margin:0}
-#board td {
-    border: 1px solid
-    height: 50px;
-}
