--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 #board {
-    width: 100%;
-    height: 100vh;
+    margin: auto;
+    border: 0;
+    background: #EEE;
+    width: 60%;
+    min-width: 400px;
 }
 body {padding:0;margin:0}
