--- a/style.css
+++ b/style.css
@@ -4,10 +4,14 @@
     background: #EEE;
     width: 60%;
     min-width: 400px;
+    font-family: sans-serif;
+    text-align:center;
 }
 body {padding:0;margin:0}
 #board td {
     height: 50px;
     border: 1px solid;
     border-spacing:0;
+    border-collapse: collapse;
+    width: 33%;
 }
