--- a/style.css
+++ b/style.css
@@ -12,10 +12,8 @@ body {padding:0;margin:0}
     height: 50px;
     border-collapse: collapse;
     width: 33%;
+    border-bottom: 2px solid;
 }
-#board tr {
-    border-bottom: 5px solid;
-}
-#board tr:last-child {
+#board tr:last-child td {
     border-bottom: 0;
 }
