--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     height: 70vh;
     font-family: sans-serif;
     text-align:center;
+    font-size: 24px;
 }
 body {padding:0;margin:0}
 #board td {
