--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     background: #EEE;
     width: 85%;
     min-width: 500px;
-    height: 70vh;
+    height: 85vw;
     font-family: sans-serif;
     text-align:center;
     font-size: 24px;
