--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     width: 85%;
     min-width: 500px;
     height: 85vw;
+    max-width: 85vh;
     font-family: sans-serif;
     text-align:center;
     font-size: 24px;
