--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     width: 85%;
     min-width: 500px;
     height: 85vw;
-    max-width: 85vh;
+    max-height: 85vh;
     font-family: sans-serif;
     text-align:center;
     font-size: 24px;
