--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body {padding:0;margin:0}
 }
 #board tr:last-child td {
     border-bottom: 0;
-}
+}h
 #board td:last-child {
     border-right: 0;
 }
+ 
