--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 #board {
     margin-top: 56px;
     margin: auto;
@@ -36,7 +34,7 @@ button {
     border: none;
     border-radius: 2px;
     cursor: pointer;
-    font-size: 16px;
+e    font-size: 16px;
 }
 button:hover {
     box-shadow：0 2px 4px rgba(0,0,0,0.54);
@@ -67,11 +65,12 @@ span.psw {
 }
 /* Modal Content/Box */
 .modal-content {
-    background-color: #fefefe;
+    background-color: #eee;
     margin:  auto; /* 5% from the top, 15% from the bottom and centered */
     border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
 }
+.title {font-family: 'Roboto', sans-serif; font-size: 20px; font-weight: 500}
 /* Add Zoom Animation */
 .animate {
     -webkit-animation: animatezoom 0.6s;
@@ -81,15 +80,7 @@ span.psw {
     from {-webkit-transform: scale(0)} 
     to {-webkit-transform: scale(1)}
 }
-    
 @keyframes animatezoom {
     from {transform: scale(0)} 
     to {transform: scale(1)}
-}
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-    span.psw {
-       display: block;
-       float: none;
-    }
 }
