--- a/style.css
+++ b/style.css
@@ -71,7 +71,11 @@ span.psw {
     border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
 }
-#title {font-family: 'Roboto', sans-serif; font-size: 20px; font-weight: 500}
+#title {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px; font-weight: 500;
+    padding: 0;
+}
 /* Add Zoom Animation */
 .animate {
     -webkit-animation: animatezoom 0.6s;
