--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@
     width: 85%;
     min-width: 500px;
     max-width: 100%;
-    height: 85vw;
-    max-height: 85vh;
+    height: 100vh;
     font-family: sans-serif;
     text-align:center;
     font-size: 24px;
@@ -26,7 +25,6 @@ body {padding:0;margin:0}
 #board td:last-child {
     border-right: 0;
 }
-/* Set a style for buttons */
 button {
     background-color: #ffc107;
     color: white;
