--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ button {
     background-color: #ffc107;
     color: white;
     padding: 8px 12px;
-    margin: 8px;
     border: none;
     border-radius: 2px;
     cursor: pointer;
@@ -37,7 +36,7 @@ button {
     box-shadow: 0 2px 4px rgba(0,0,0,0.54);
     outline: 0;
 }
-button:hover {
+button:hover, button:active {
     box-shadow：0 4px 8px rgba(0,0,0,0.54);
 }
 /* Extra styles for the cancel button */
@@ -57,11 +56,11 @@ span.psw {
     z-index: 3; /* Sit on top */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
+    width: 100%;
+    height: 100%;
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: rgba(0,0,0,0.2);
     padding-top: 60px;
 }
 /* Modal Content/Box */
@@ -71,6 +70,7 @@ span.psw {
     border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
     max-width: 500px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.54);
 }
 #title {
     font-family: 'Roboto', sans-serif;
