--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ button {
     font-size: 16px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.54);
     outline: 0;
+    text-transform: uppercase;
 }
 button:hover, button:active {
     box-shadow：0 4px 8px rgba(0,0,0,0.54);
